index.html has been slightly changed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <h1>1ST CODE IN PUBLIC</h1>
 
    <a href="class2.html">CLASS 2</a>
+   <br/>
    <a href="class3.html">CLASS 3</a>
+   <br/>
+   <div style="background-color: pink;">LOTS OF LOVE BROO</div>
 
 </body>
 </html>
