index file has changed completely

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
   <head>
       <title>INDEX MAIN PAGE</title>
+      <link rel="stylesheet" href="class5.css" />
+      <link rel="stylesheet" href="class6_2.css" />
+      <link rel="stylesheet" href="class7_media.css" />
+      <link rel="stylesheet" href="class7_pos.css" />
+      <link rel="stylesheet" href="class8_pseudo.css" />
      
   </head>
   <body>
@@ -11,6 +16,20 @@
    <a href="class2.html">CLASS 2</a>
    <br/>
    <a href="class3.html">CLASS 3</a>
+   <br/>
+   <a href="class4.html">CLASS 4</a>
+   <br/>
+   <a href="class5.html">CLASS 5</a>
+   <br/>
+   <a href="class6_1.html">CLASS 6_1</a>
+   <br/>
+   <a href="class6_2.html">CLASS 6_2</a>
+   <br/>
+   <a href="class7_media.html">CLASS 7_1</a>
+   <br/>
+   <a href="class7_pos.html">CLASS 7_2</a>
+   <br/>
+   <a href="class8_pseudo.html">CLASS 8_1</a>
    <br/>
    <div style="background-color: pink;">LOTS OF LOVE BROO</div>
 
