index file has changed completely

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
 
+   <div style="background-color: white;">
     <h1>1ST CODE IN PUBLIC</h1>
 
    <a href="class2.html">CLASS 2</a>
@@ -32,6 +33,6 @@
    <a href="class8_pseudo.html">CLASS 8_1</a>
    <br/>
    <div style="background-color: pink;">LOTS OF LOVE BROO</div>
-
+</div>
 </body>
 </html>
