index file has changed completely

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
       <link rel="stylesheet" href="class6_2.css" />
       <link rel="stylesheet" href="class7_media.css" />
       <link rel="stylesheet" href="class7_pos.css" />
+      <link rel="stylesheet" href="class8.css" />
       <link rel="stylesheet" href="class8_pseudo.css" />
+      <link rel="stylesheet" href="class9.css" />
+
+
      
   </head>
   <body>
@@ -30,7 +34,11 @@
    <br/>
    <a href="class7_pos.html">CLASS 7_2</a>
    <br/>
+   <a href="class8.html">CLASS 8</a>
+   <br/>
    <a href="class8_pseudo.html">CLASS 8_1</a>
+   <br/>
+   <a href="class9.html">CLASS 9</a>
    <br/>
    <div style="background-color: pink;">LOTS OF LOVE BROO</div>
 </div>
